--- a/views/index.html
+++ b/views/index.html
@@ -55,7 +55,7 @@
 	        <li ng-click='scrollToSection("#education-screen")'><a style="color:rgb(35, 35, 35)">EDUCATION</a></li>
 	        <li ng-click='scrollToSection("#experience-screen")'><a style="color:rgb(35, 35, 35)">EXPERIENCE</a></li>
 	        <li ng-click='scrollToSection("#contact-screen")'><a style="color:rgb(35, 35, 35)">CONTACT</a></li>
-	        <li><a class="active" style="color:rgb(69, 183, 122)" href="../docs/Adam_Estela_Resume.docx">DOWNLOAD RESUME</a></li>
+	        <li><a class="active" style="color:rgb(142, 16, 42);border-bottom: 1px solid rgb(142, 16, 42); href="../docs/Adam_Estela_Resume.docx">DOWNLOAD RESUME</a></li>
 	      </ul>
 	    </div><!-- /.navbar-collapse -->
 	  </div><!-- /.container-fluid -->
@@ -71,13 +71,13 @@
 			</header>
 		</div>
 
-		<div class='row'>
-			<div class='social-icons'>
-				<!--a id='git-icon' class='icon' href='https://github.com/aconfee' target="_blank"></a-->
+		<div class='row' style="text-align:center; margin:20px 20px 100px 20px;">
+			<!--div class='social-icons'>
 				<a id='linkedin-icon' class='icon' href='http://tinyurl.com/nact72n' target="_blank"></a>
 				<a id='youtube-icon' class='icon' href='http://tinyurl.com/khovsg2' target="_blank"></a>
 				<a id='facebook-icon' class='icon' href='http://tinyurl.com/mv258dp' target="_blank"></a>
-			</div>
+			</div-->
+			<a id="download-resume-button" href="../docs/Adam_Estela_Resume.docx">DOWNLOAD RESUME</a>
 		</div>
 
 		<div class='row'>
@@ -117,15 +117,15 @@
 		</div>
 		<div class='row section'>
 			<div id='gamesOverviewIcon' class='col-xs-1 col-xs-offset-2 fadeInBottom'>
-				<img src="../resources/game-icon.jpg" class="img-responsive">
+				<img src="../resources/game-icon.png" class="img-responsive" style="max-width:190%">
 			</div>
 			<div id='gamesOverview' class='col-xs-6 col-xs-offset-1 text fadeInRight'>
-				<span class='text-header'>GAMES&nbsp;&nbsp;</span><span>My foundation lies in extensive use of C/C++ which I used to complete several game engines from scratch. I utilized heavy math, complex algorithms and optimization while architecting game engines, graphics pipelines, AI, and more. On my game teams I took further initiative by accepting product manager responsibilities and attending additional classes, ultimately succeeding in delivering each milestone with tremendous success. I successfully completed 5 games during my 3.5 years of matriculation alongside tutoring, and an overbooked course load.
+				<span class='text-header'>GAMES&nbsp;&nbsp;</span><span>My foundation lies in extensive use of C/C++ which I used to develop several game engines from scratch. I utilized heavy math, complex algorithms and optimization while architecting game engines, graphics pipelines, AI, and more. On my game teams I took further initiative by accepting product manager responsibilities and attending additional classes, ultimately succeeding in delivering each milestone with tremendous success. I successfully completed 5 games during my 3.5 years of matriculation alongside tutoring, and an overbooked course load.
 			</div>
 		</div>
 		<div class='row section'>
 			<div id='webOverviewIcon' class='col-xs-1 col-xs-offset-2 fadeInBottom'>
-				<img src="../resources/web-icon.jpg" class="img-responsive">
+				<img src="../resources/web-icon.png" class="img-responsive" style="max-width:190%">
 			</div>
 			<div id='webOverview' class='col-xs-6 col-xs-offset-1 text fadeInRight'>
 				<span class='text-header'>WEB&nbsp;&nbsp;</span><span>I pursued web development out of passion during the early part of my career. In my first month of learning I worked tirelessly on solo end-end web applications while receiving professional feedback at work. After one month, I built this resume site, and one month after that I began contributing to front end development on a professional level at work. I have spent countless hours outside of work continuing to learn and explore web development, and haven't stopped working on both front-end and full-stack projects since I started.</span>
@@ -133,7 +133,7 @@
 		</div>
 		<div class='row section'>
 			<div id='testOverviewIcon' class='col-xs-1 col-xs-offset-2 fadeInBottom'>
-				<img src="../resources/test-icon.jpg" class="img-responsive">
+				<img src="../resources/test-icon.png" class="img-responsive" style="max-width:190%">
 			</div>
 			<div id='testOverview' class='col-xs-6 col-xs-offset-1 text fadeInRight'>
 				<span class='text-header'>TEST&nbsp;&nbsp;</span><span>I'm currently working with several HoloLens experience incubation teams to architect and develop an automation framework and toolset from the ground up that scales across multiple products and vastly varying devices. During my time in test, especially working on bleeding edge technology, I've not only grown as a developer, but have experience based intuition for viewing the product as a whole: helping improve product quality by reducing technical debt, improving team workflow to work smarter, working with designers to predict product technical needs early on, and much more.</span></span>
@@ -433,10 +433,11 @@
 				<img class="img-responsive" style="border-radius:2px;" src="../resources/paperGimage.png"></img>
 				<br/>
 				<p>
-					I was one of two SDETs who built and expanded the test automation framework, build infrastructure and tools.
+					I was one of two SDETs who developed the test automation framework, build infrastructure and tools.
 					<ul>
 						<li><p>Promoted in 4 months based on merit.</p></li>
 						<li><p>Developed tools, features, and infrastructure that improved test performance.</p></li>
+						<li><p>Contributed to front-end feature development.</p></li>
 						<li><p>Developed tools for test automation authors to ensure reliable UI tests. (~80% less false negatives)</p></li>
 						<li><p>Implemented multi-browser automated UI tests and monitoring. </p></li>
 						<li><p>Helped lead, organize, and unify team test team efforts to be more effective.</p></li>
