--- a/styles/cover.css
+++ b/styles/cover.css
@@ -118,3 +118,27 @@
 	display:inline-block;
 	margin-bottom: 10em;
 }
+
+#download-resume-button{
+	background-color:rgb(142, 16, 42);
+	border: 1px solid white;
+	color:white;
+	text-align:center;
+	width:200px;
+	height:50px;
+	border-radius:2px;
+	margin:auto;
+	display:inline-block;
+	font-size:1.2em;
+	padding-top:10px;
+	
+	-webkit-transition: 0.2s ease-in-out;
+    -moz-transition: 0.2s ease-in-out;
+    -o-transition: 0.2s ease-in-out;
+    transition: 0.2s ease-in-out;
+}
+
+#download-resume-button:hover{
+	background-color:white;
+	color:rgb(142, 16, 42);
+}
