--- a/styles/skills.css
+++ b/styles/skills.css
@@ -180,3 +180,22 @@
 	margin-top:60px;
 }
 
+/* Skill description navigation */
+.item-select{
+	border-radius:50%;
+	border:1px solid rgb(68, 80, 96);
+	width:10px;
+	height:10px;
+	display:inline-block;
+	margin:5px;
+}
+
+.item-select.active{
+	background-color:rgb(68, 80, 96);
+}
+
+.item-select:hover{
+	cursor:pointer;
+	background-color:rgb(68, 80, 96);
+}
+
