--- a/views/index.html
+++ b/views/index.html
@@ -136,7 +136,7 @@
 				<img src="../resources/test-icon.png" class="img-responsive" style="max-width:190%">
 			</div>
 			<div id='testOverview' class='col-xs-6 col-xs-offset-1 text fadeInRight'>
-				<span class='text-header'>TEST&nbsp;&nbsp;</span><span>I'm currently working with several HoloLens experience incubation teams to architect and develop an automation framework and toolset from the ground up that scales across multiple products and vastly varying devices. During my time in test, especially working on bleeding edge technology, I've not only grown as a developer, but have experience based intuition for viewing the product as a whole: helping improve product quality by reducing technical debt, improving team workflow to work smarter, working with designers to predict product technical needs early on, and much more.</span></span>
+				<span class='text-header'>TOOLS&nbsp;&nbsp;</span><span>I'm currently working with several HoloLens experience incubation teams to architect and develop an automation framework and toolset from the ground up that scales across multiple products and vastly varying devices. While creating tools and working on bleeding edge technology, I've not only grown as a developer, but have experience based intuition for viewing the product as a whole: helping improve product quality by identifying areas to reduce technical debt, helping design, build and integrate tools across several teams with maximum re-use in mind, working with designers to predict product technical needs, and much more.</span></span>
 			</div>
 		</div>
 	</div>
@@ -313,6 +313,9 @@
 						<br/>
 						<p class='left-align attribute-description'>{{ languageDisplay.description }}</p>
 					</p>
+					<div class="item-select-widget" style="text-align:center">
+						<div class="item-select" ng-class="{'active': $index == selectedLanguage}" ng-repeat="language in languages" ng-click="displayLanguageDescription(language.name); selectLanguage($index)"></div>
+					</div>
 				</div>
 			</div>			
 			<div class="col-xs-1">
@@ -351,6 +354,9 @@
 						<br/>
 						<p class='left-align attribute-description'>{{ toolDisplay.description }}</p>
 					</p>
+					<div class="item-select-widget" style="text-align:center">
+						<div class="item-select" ng-class="{'active': $index == selectedTool}" ng-repeat="tool in tools" ng-click="displayToolDescription(tool.name); selectTool($index)"></div>
+					</div>
 				</div>
 			</div>
 			<div class="col-xs-1">
