--- a/views/index.html
+++ b/views/index.html
@@ -133,7 +133,7 @@
 		</div>
 		<div class='row section'>
 			<div id='testOverviewIcon' class='col-xs-1 col-xs-offset-2 fadeInBottom'>
-				<img src="../resources/test-icon.png" class="img-responsive" style="max-width:190%">
+				<img src="../resources/tools-icon.png" class="img-responsive" style="max-width:190%">
 			</div>
 			<div id='testOverview' class='col-xs-6 col-xs-offset-1 text fadeInRight'>
 				<span class='text-header'>TOOLS&nbsp;&nbsp;</span><span>I'm currently working with several HoloLens experience incubation teams to architect and develop an automation framework and toolset from the ground up that scales across multiple products and vastly varying devices. While creating tools and working on bleeding edge technology, I've not only grown as a developer, but have experience based intuition for viewing the product as a whole: helping improve product quality by identifying areas to reduce technical debt, helping design, build and integrate tools across several teams with maximum re-use in mind, working with designers to predict product technical needs, and much more.</span></span>
