change submit query to send

--- a/views/index.html
+++ b/views/index.html
@@ -517,7 +517,7 @@
 				  </div>
 				  <div class="form-group">
 				    <div class="col-xs-12">
-				      <input id='send-email-button' ng-click='sendEmail();' name='submit' type="submit" class="btn-lg"></input>
+				      <input id='send-email-button' ng-click='sendEmail();' value="SEND!" name='submit' type="submit" class="btn-lg"></input>
 				    </div>
 				  </div>
 				</form>
